--- a/servicios.html
+++ b/servicios.html
@@ -30,10 +30,10 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item ms-3">
-                            <a class="nav-link active" aria-current="page" href="index.html">Productos</a>
+                            <a class="nav-link" href="index.html">Productos</a>
                         </li>
                         <li class="nav-ite ms-3">
-                            <a class="nav-link" href="servicios.html">Servicios</a>
+                            <a class="nav-link active" aria-current="page"  href="servicios.html">Servicios</a>
                         </li>
                         <li class="nav-item ms-3">
                             <a class="nav-link" href="#">Contacto</a>
