--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Mi primera web con Bootstrap</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="estilo.css">
+    <link rel="stylesheet" href="css/estilo.css">
 </head>
 
 <body>
@@ -16,7 +16,7 @@
             <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
                 <a href="/"
                     class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
-                    <img src="logo.png" alt="logo" width="64">
+                    <img src="img/logo.png" alt="logo" width="64">
                     <span class="fs-6">Mi Web Bootstrap</span>
                 </a>
                 <ul class="nav nav-pills">
@@ -30,10 +30,10 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item ms-3">
-                            <a class="nav-link active" aria-current="page" href="index.html">Productos</a>
+                            <a class="nav-link active" aria-current="page" href="index.html">Servicios</a>
                         </li>
                         <li class="nav-ite ms-3">
-                            <a class="nav-link" href="servicios.html">Servicios</a>
+                            <a class="nav-link" href="productos.html">Productos</a>
                         </li>
                         <li class="nav-item ms-3">
                             <a class="nav-link" href="#">Contacto</a>
@@ -53,13 +53,13 @@
                 </div>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="cabecera01.png" class="d-block w-100" alt="...">
+                        <img src="img/cabecera01.webp" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item">
-                        <img src="cabecera01.png" class="d-block w-100" alt="...">
+                        <img src="img/cabecera02.webp" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item">
-                        <img src="cabecera01.png" class="d-block w-100" alt="...">
+                        <img src="img/cabecera03.webp" class="d-block w-100" alt="...">
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
@@ -77,34 +77,40 @@
             <div class="row row-cols-1 row-cols-md-3 g-4 p-4">
                 <div class="col">
                     <div class="card">
-                        <img src="card01.png" class="card-img-top" alt="...">
+                        <img src="img/estaticos.webp" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in
-                                to
-                                additional content.</p>
+                            <h5 class="card-title">Desarrollos Estáticos</h5>
+                            <p class="card-text">
+                                El desarrollo estático garantiza estructuras 
+                                sólidas y seguras, enfocándose en la estabilidad 
+                                y eficiencia de cada proyecto para un rendimiento duradero.
+                            </p>
                         </div>
                     </div>
                 </div>
                 <div class="col">
                     <div class="card">
-                        <img src="card01.png" class="card-img-top" alt="...">
+                        <img src="img/dinamicos.webp" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in
-                                to
-                                additional content.</p>
+                            <h5 class="card-title">Desarrollos Dinámicos</h5>
+                            <p class="card-text">
+                                Ofrecemos soluciones flexibles y adaptables, optimizadas 
+                                para responder eficazmente a entornos cambiantes 
+                                y necesidades en constante evolución.
+                            </p>
                         </div>
                     </div>
                 </div>
                 <div class="col">
                     <div class="card">
-                        <img src="card01.png" class="card-img-top" alt="...">
+                        <img src="img/alamedida.webp" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in
-                                to
-                                additional content.</p>
+                            <h5 class="card-title">Diseño a la Medida</h5>
+                            <p class="card-text">
+                                Generamos soluciones personalizadas que se ajustan 
+                                 a las necesidades de cada cliente, garantizando 
+                                funcionalidad y eficiencia en cada proyecto.
+                            </p>
                         </div>
                     </div>
                 </div>
