--- a/index.html
+++ b/index.html
@@ -13,34 +13,22 @@
 
         <main>
 
-            <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
-                <a href="/"
-                    class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
-                    <img src="img/logo.png" alt="logo" width="64">
-                    <span class="fs-6">Mi Web Bootstrap</span>
-                </a>
-                <ul class="nav nav-pills">
-                    <li class="nav-item"><a href="#" class="nav-link active" aria-current="page">Inicio</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link">Trabaja con Nosotros</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link">Nosotros</a></li>
-                </ul>
-            </header>
-
-            <nav class="navbar navbar-expand bg-body-tertiary rounded-pill">
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav">
-                        <li class="nav-item ms-3">
-                            <a class="nav-link active" aria-current="page" href="index.html">Servicios</a>
-                        </li>
-                        <li class="nav-ite ms-3">
-                            <a class="nav-link" href="productos.html">Productos</a>
-                        </li>
-                        <li class="nav-item ms-3">
-                            <a class="nav-link" href="#">Contacto</a>
-                        </li>
-                    </ul>
+            <header
+                class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 ms-4 me-3 border-bottom">
+                <div class="col-md-3 mb-2 mb-md-0">
+                    <a href="/" class="d-inline-flex link-body-emphasis text-decoration-none">
+                        <img src="img/logo.png" width="72px">
+                    </a>
                 </div>
-            </nav>
+
+                <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
+                    <li><a href="index.html" class="nav-link px-2 link-secondary">Inicio</a></li>
+                    <li><a href="#" class="nav-link px-2">Productos</a></li>
+                    <li><a href="#" class="nav-link px-2">Equipo</a></li>
+                    <li><a href="contactenos.html" class="nav-link px-2">Contáctenos</a></li>
+                </ul>
+
+            </header>
 
             <div id="carouselExampleIndicators" class="carousel slide p-6 m-4">
                 <div class="carousel-indicators">
@@ -74,6 +62,11 @@
                 </button>
             </div>
 
+            <div class="ms-4">
+                <h2>Servicios</h2>
+                <p>Servicios disponibles para nuestra preciada clientela.</p>
+            </div>
+            
             <div class="row row-cols-1 row-cols-md-3 g-4 p-4">
                 <div class="col">
                     <div class="card">
@@ -81,8 +74,8 @@
                         <div class="card-body">
                             <h5 class="card-title">Desarrollos Estáticos</h5>
                             <p class="card-text">
-                                El desarrollo estático garantiza estructuras 
-                                sólidas y seguras, enfocándose en la estabilidad 
+                                El desarrollo estático garantiza estructuras
+                                sólidas y seguras, enfocándose en la estabilidad
                                 y eficiencia de cada proyecto para un rendimiento duradero.
                             </p>
                         </div>
@@ -94,8 +87,8 @@
                         <div class="card-body">
                             <h5 class="card-title">Desarrollos Dinámicos</h5>
                             <p class="card-text">
-                                Ofrecemos soluciones flexibles y adaptables, optimizadas 
-                                para responder eficazmente a entornos cambiantes 
+                                Ofrecemos soluciones flexibles y adaptables, optimizadas
+                                para responder eficazmente a entornos cambiantes
                                 y necesidades en constante evolución.
                             </p>
                         </div>
@@ -107,8 +100,8 @@
                         <div class="card-body">
                             <h5 class="card-title">Diseño a la Medida</h5>
                             <p class="card-text">
-                                Generamos soluciones personalizadas que se ajustan 
-                                 a las necesidades de cada cliente, garantizando 
+                                Generamos soluciones personalizadas que se ajustan
+                                a las necesidades de cada cliente, garantizando
                                 funcionalidad y eficiencia en cada proyecto.
                             </p>
                         </div>
