--- a/contactenos.html
+++ b/contactenos.html
@@ -34,53 +34,55 @@
 
             <p>Complete el siguiente formulario para ponerse en contacto con nuestro equipo.</p>
 
-            <form class="row g-3">
+            <form class="row g-3"> <!--</form> action="/contacto" method="post">-->
                 <div class="col-12">
-                  <label for="inputName" class="form-label">Nombre Completo</label>
-                  <input type="text" class="form-control" id="inputName">
+                    <label for="inputName" class="form-label">Nombre completo:</label>
+                    <input type="text" class="form-control" id="inputName">
                 </div>
                 <div class="col-12">
-                    <label for="inputEmail4" class="form-label">Email</label>
-                    <input type="email" class="form-control" id="inputEmail4">
-                  </div>
-                <div class="col-12">
-                  <label for="inputAddress" class="form-label">Address</label>
-                  <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
+                    <label for="inputEmail" class="form-label">Correo electrónico:</label>
+                    <input type="email" class="form-control" id="inputEmail">
                 </div>
                 <div class="col-12">
-                  <label for="inputAddress2" class="form-label">Address 2</label>
-                  <input type="text" class="form-control" id="inputAddress2" placeholder="Apartment, studio, or floor">
+                    <label for="inputAddress" class="form-label">Dirección:</label>
+                    <input type="text" class="form-control" id="inputAddress" placeholder="Calle ...">
                 </div>
-                <div class="col-md-6">
-                  <label for="inputCity" class="form-label">City</label>
-                  <input type="text" class="form-control" id="inputCity">
+                <div class="col-6">
+                    <label for="inputAddress2" class="form-label">Barrio:</label>
+                    <input type="text" class="form-control" id="inputAddress2" placeholder="Calle ...">
+                </div>
+                <div class="col-6">
+                    <label for="inputPhone" class="form-label">Teléfono:</label>
+                    <input type="text" class="form-control" id="inputPhone" placeholder="+57 000 00 00000">
+                </div>
+                <div class="col-md-5">
+                    <label for="inputCity" class="form-label">Ciudad:</label>
+                    <input type="text" class="form-control" id="inputCity">
                 </div>
                 <div class="col-md-4">
-                  <label for="inputState" class="form-label">State</label>
-                  <select id="inputState" class="form-select">
-                    <option selected>Choose...</option>
-                    <option>...</option>
-                  </select>
+                    <label for="inputState" class="form-label">Estado</label>
+                    <input type="text" class="form-control" id="inputState">
                 </div>
-                <div class="col-md-2">
-                  <label for="inputZip" class="form-label">Zip</label>
-                  <input type="text" class="form-control" id="inputZip">
+                <div class="col-md-3">
+                    <label for="inputZip" class="form-label">Código Postal</label>
+                    <input type="text" class="form-control" id="inputZip">
                 </div>
                 <div class="col-12">
-                  <div class="form-check">
-                    <input class="form-check-input" type="checkbox" id="gridCheck">
-                    <label class="form-check-label" for="gridCheck">
-                      Check me out
-                    </label>
-                  </div>
+                    <label for="inputMessage" class="form-label">Mensaje:</label>
+                    <textarea type="text" class="form-control" id="inputMessage"></textarea>
                 </div>
                 <div class="col-12">
-                  <button type="submit" class="btn btn-primary">Sign in</button>
+                    <div class="form-check">
+                        <input class="form-check-input" type="checkbox" id="gridCheck">
+                        <label class="form-check-label" for="gridCheck">
+                            Autorización para tratamiento de datos personales.
+                        </label>
+                    </div>
                 </div>
-              </form>
-
-            
-
+                <div class="col-12">
+                    <button type="button" class="btn btn-primary">Enviar solicitud</button>
+                </div>
+            </form>
 
         </main>
 
@@ -93,6 +95,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
+    <script src="js/jquery-3.7.1.min.js"></script>
+    <script src="js/libreria.js"></script>
 </body>
 
 </html>
