--- a/index.html
+++ b/index.html
@@ -42,12 +42,24 @@
                 <div class="carousel-inner">
                     <div class="carousel-item active">
                         <img src="img/cabecera01.webp" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>First slide label</h5>
+                            <p>Some representative placeholder content for the first slide.</p>
+                          </div>
                     </div>
                     <div class="carousel-item">
                         <img src="img/cabecera02.webp" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>First slide label</h5>
+                            <p>Some representative placeholder content for the first slide.</p>
+                          </div>
                     </div>
                     <div class="carousel-item">
                         <img src="img/cabecera03.webp" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>First slide label</h5>
+                            <p>Some representative placeholder content for the first slide.</p>
+                          </div>
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
